# -ABANDONED-old-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: CMakeLists.txt  Dependencies.txt  Doxyfile.in  File Formats.txt  Model Data Mockup.blend  PackageSystemDesign.txt  ShaderCompilerDiagram  ShaderCompilerDiagram~  ShaderFileMockup.asfxdef  gltfshaderReq.ods
docs/ReflectionSystemMockup/: NoReflect.h  Reflect.h
shaders/include/: common.glsl  snippetStructs.glsl
source/: CMakeLists.txt
source/engine/: CMakeLists.txt  asCommon.c  asEntry.c  asEntry.h  asInstanceRenderer.c  asNuklearImplimentation.c  asOsEvents.c  asOsEvents.h  asRendererCore.c  asResource.c  asResource.h  asVulkanBackend.c  astrengineConfig.h.in  entry.c
source/engine/cimgui/: CMakeLists.txt  asDearImGuiImplimentation.c  asDearImGuiImplimentation.h
source/engine/common/: CMakeLists.txt  asBin.c  asBin.h  asCommon.c  asCommon.h  asConfigFile.c  asConfigFile.h  asDebugDraw.c  asDebugDraw.h  asDebugLog.c  asDebugLog.h  asHandleManager.c  asHandleManager.h  asHashing.c  asHashing.h  asIndirectionTable.c  asIndirectionTable.h  asLinearMemoryAllocator.c  asLinearMemoryAllocator.h  asStackContainer.h  asTime.c  asTime.h
source/engine/common/preferences/: asPreferences.c  asPreferences.h
source/engine/common/reflection/: asManualSerialList.c  asManualSerialList.h  asReflectDefine.h  asReflectIOBinary.c  asReflectIOBinary.h  asReflectIOCfg.c  asReflectIOCfg.h  asReflectImpliment.c  asReflectImpliment.h
source/engine/engineCore/: CMakeLists.txt  asEntry.c  asEntry.h  asOsEvents.c  asOsEvents.h
source/engine/flecs/: CMakeLists.txt  asFlecsImplimentation.c  asFlecsImplimentation.h
source/engine/gameUtilities/: CMakeLists.txt  asFirstPersonCamera.c  asFirstPersonCamera.h  asFlyCamera.c  asFlyCamera.h
source/engine/guiTools/: CMakeLists.txt
source/engine/guiTools/cmdConsole/: CMakeLists.txt  asCmdConsole.c  asCmdConsole.h
source/engine/include/: asCommon.h  asEntry.h  asInstanceRenderer.h  asNuklearImplimentation.h  asOsEvents.h  asRendererCore.h  asResource.h  entry.h
source/engine/include/lowlevel/: asVulkanBackend.h
source/engine/input/: CMakeLists.txt  asInput.c  asInput.h
source/engine/model/: CMakeLists.txt
source/engine/model/builder/: CMakeLists.txt
source/engine/model/runtime/: CMakeLists.txt  asModelRuntime.c  asModelRuntime.h
source/engine/nuklear/: CMakeLists.txt  asNuklearImplimentation.c  asNuklearImplimentation.h
source/engine/renderer/: CMakeLists.txt  asBindlessTexturePool.c  asBindlessTexturePool.h  asInstanceRenderer.h  asRenderFx.c  asRenderFx.h  asRenderGraph.h  asRendererCore.c  asRendererCore.h  asSceneRenderer.c  asSceneRenderer.h  asShaderVariants.c  asShaderVariants.h  asTextureFromKtx.c  asTextureFromKtx.h
source/engine/renderer/vulkan/: CMakeLists.txt  asVulkanBackend.c  asVulkanBackend.h
source/engine/resource/: CMakeLists.txt  asResource.c  asResource.h  asUserFiles.c  asUserFiles.h
source/tests/: CMakeLists.txt  main.c  nuklearOverview.c  nuklearOverview.h  reflectTest.c  reflectTest.h
source/tools/: CMakeLists.txt
source/tools/radiositygen/: CMakeLists.txt
source/tools/resourcepackage/: CMakeLists.txt  MakeTree.c  MakeTree.h  ManifestBuild.c  ManifestBuild.h  ResourcePackager.c
source/tools/shadercompiler/: CMakeLists.txt  FileParser.c  FileParser.h  FxAssembler.c  FxAssembler.cc  FxAssembler.h  FxCreator.c  FxCreator.h  GLSLCompiler.c  GLSLCompiler.h  GLSLGenerator.cc  GLSLGenerator.h  MacroParser.c  MacroParser.h  SPIRVCompiler.cc  SPIRVCompiler.h  ShaderCompiler.c  ShaderGen.cc  ShaderGen.h  main.c  main.cc
