file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
file(GLOB_RECURSE HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
add_library(asFlecs ${SRC_FILES} ${HEADER_FILES})
set_property(TARGET asFlecs PROPERTY FOLDER "astrengine/Modules")
set_property(TARGET asFlecs PROPERTY C_STANDARD 99)
target_link_libraries(asFlecs thirdParty_flecs)