file(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.c)
file(GLOB_RECURSE HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
add_library(asCmdConsole ${SRC_FILES} ${HEADER_FILES})
set_property(TARGET asCmdConsole PROPERTY FOLDER "astrengine/Modules/GuiTools")
set_property(TARGET asCmdConsole PROPERTY C_STANDARD 99)
#target_link_libraries(asCmdConsole asDearImgui)